tests/fixtures/invalid/int_pow_none.py
# Cannot power Int and None
x: int = 1 ** None
